# gamma_shift

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gamma_correct.cpp  gamma_correct.h  image_handler.cpp  image_handler.h  main.cpp
tests/: CMakeLists.txt  sample_test.cpp
